Java/JDK-8352290/0000019425461a0f/exception-K1Jdk8Test.txt
org.jetbrains.kotlin.test.JavaCompilationError: Java files are not compiled successfully
/root/autodl-tmp/tmp/tests-common-newProject_test_2864955154367664193/org.jetbrains.kotlin.test.CodeSmithDifferentialTest1353075test/java-sources/main/VS9JB.java:119: error: name clash: uaYRTdI(T3) in KRaK and uaYRTdI(T1) in TPYlFU have the same erasure, yet neither overrides the other
public final class VS9JB extends KRaK<TIUN3a, I75L6> implements I0vt3 {
             ^
  where T3,T1 are type-variables:
    T3 extends Object declared in class KRaK
    T1 extends Object declared in interface TPYlFU
1 error
	at org.jetbrains.kotlin.test.JavaCompilationResult.assertSuccessful(JvmCompilationUtils.kt:37)
	at org.jetbrains.kotlin.test.java.JavaCompilerFacade.compileJavaFiles(JavaCompilerFacade.kt:45)
	at org.jetbrains.kotlin.test.backend.ir.JvmIrBackendFacade.transform(JvmIrBackendFacade.kt:54)
	at org.jetbrains.kotlin.test.backend.ir.JvmIrBackendFacade.transform(JvmIrBackendFacade.kt:28)
	at org.jetbrains.kotlin.test.TestStep$FacadeStep.processModule(TestStep.kt:47)
	at org.jetbrains.kotlin.test.TestRunner.processModule(TestRunner.kt:206)
	at org.jetbrains.kotlin.test.TestRunner.hackyProcessModule(TestRunner.kt:197)
	at org.jetbrains.kotlin.test.TestRunner.processModule(TestRunner.kt:141)
	at org.jetbrains.kotlin.test.TestRunner.runTestPipeline(TestRunner.kt:92)
	at org.jetbrains.kotlin.test.TestRunner.runTestImpl(TestRunner.kt:70)
	at org.jetbrains.kotlin.test.TestRunner.runTest(TestRunner.kt:30)
	at org.jetbrains.kotlin.test.TestRunner.runTest$default(TestRunner.kt:28)
	at org.jetbrains.kotlin.test.runners.AbstractKotlinCompilerTest.runTest(AbstractKotlinCompilerTest.kt:91)
	at org.jetbrains.kotlin.test.CodeSmithDifferentialTest$IDifferentialTest.testProgram(CodeSmithDifferentialTest.kt:43)
	at org.jetbrains.kotlin.test.CodeSmithDifferentialTest.doOneRound(CodeSmithDifferentialTest.kt:129)
	at org.jetbrains.kotlin.test.CodeSmithDifferentialTest$test$1$1$job$1.invokeSuspend(CodeSmithDifferentialTest.kt:177)
	at kotlin.coroutines.jvm.internal.BaseContinuationImpl.resumeWith(ContinuationImpl.kt:33)
	at kotlinx.coroutines.DispatchedTask.run(DispatchedTask.kt:101)
	at kotlinx.coroutines.internal.LimitedDispatcher$Worker.run(LimitedDispatcher.kt:113)
	at kotlinx.coroutines.scheduling.TaskImpl.run(Tasks.kt:89)
	at kotlinx.coroutines.scheduling.CoroutineScheduler.runSafely(CoroutineScheduler.kt:589)
	at kotlinx.coroutines.scheduling.CoroutineScheduler$Worker.executeTask(CoroutineScheduler.kt:823)
	at kotlinx.coroutines.scheduling.CoroutineScheduler$Worker.runWorker(CoroutineScheduler.kt:720)
	at kotlinx.coroutines.scheduling.CoroutineScheduler$Worker.run(CoroutineScheduler.kt:707)
